--- a/index.html
+++ b/index.html
@@ -18,199 +18,205 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a class="link-logo" href="./index.html">
-          Web<span class="webstudio">Studio</span></a
-        >
-        <ul>
-          <li><a class="link" href="./index.html">Studio</a></li>
-          <li><a class="link" href="">Portfolio</a></li>
-          <li><a class="link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address-list">
-        <ul>
-          <li>
-            <a class="link-address" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            ><br />
-          </li>
-          <li>
-            <a class="link-address" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="nav-list">
+          <a class="link-logo" href="./index.html">
+            Web<span class="webstudio">Studio</span></a
+          >
+          <ul class="nav-list-item">
+            <li><a class="link" href="./index.html">Studio</a></li>
+            <li><a class="link" href="">Portfolio</a></li>
+            <li><a class="link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address-list">
+          <ul class="address-list-item">
+            <li>
+              <a class="link-address" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              ><br />
+            </li>
+            <li>
+              <a class="link-address" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="section-one">
-        <h1 class="h-one">Effective Solutions for Your Business</h1>
-        <button class="button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="h-one">Effective Solutions for Your Business</h1>
+          <button class="button" type="button">Order Service</button>
+        </div>
       </section>
 
       <section>
-        <h2>Benefits</h2>
-        <ul>
-          <li>
-            <h3 class="benefits-list">Strategy</h3>
-            <p class="benefits-p">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-
-          <li>
-            <h3 class="benefits-list">Punctuality</h3>
-            <p class="benefits-p">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-
-          <li>
-            <h3 class="benefits-list">Diligence</h3>
-            <p class="benefits-p">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-
-          <li>
-            <h3 class="benefits-list">Technologies</h3>
-            <p class="benefits-p">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Benefits</h2>
+          <ul class="benefits-list">
+            <li>
+              <h3 class="benefits-item">Strategy</h3>
+              <p class="benefits-p">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-item">Punctuality</h3>
+              <p class="benefits-p">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-item">Diligence</h3>
+              <p class="benefits-p">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-item">Technologies</h3>
+              <p class="benefits-p">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section-three">
-        <h2 class="our-team">Our Team</h2>
-        <ul>
-          <li class="img-background">
-            <img
-              src="./images/imgfirstperson.jpg"
-              alt="Portrait of Mark Guerrero, Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list">Mark Guerrero</h3>
-            <p class="team-list-p">Product Designer</p>
-          </li>
-
-          <li class="img-background">
-            <img
-              src="./images/img2person.jpg"
-              alt="Portrait of Tom Ford, Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list">Tom Ford</h3>
-            <p class="team-list-p">Frontend Developer</p>
-          </li>
-
-          <li class="img-background">
-            <img
-              src="./images/img3person.jpg"
-              alt="Portrait of Camila Garcia, Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list">Camila Garcia</h3>
-            <p class="team-list-p">Marketing</p>
-          </li>
-
-          <li class="img-background">
-            <img
-              src="./images/img4person.jpg"
-              alt="Portrait of Daniel Wilson, Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list">Daniel Wilson</h3>
-            <p class="team-list-p">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="our-team">Our Team</h2>
+          <ul class="team-list">
+            <li class="img-background">
+              <img
+                src="./images/imgfirstperson.jpg"
+                alt="Portrait of Mark Guerrero, Product Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item">Mark Guerrero</h3>
+              <p class="team-list-p">Product Designer</p>
+            </li>
+            <li class="img-background">
+              <img
+                src="./images/img2person.jpg"
+                alt="Portrait of Tom Ford, Product Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item">Tom Ford</h3>
+              <p class="team-list-p">Frontend Developer</p>
+            </li>
+            <li class="img-background">
+              <img
+                src="./images/img3person.jpg"
+                alt="Portrait of Camila Garcia, Product Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item">Camila Garcia</h3>
+              <p class="team-list-p">Marketing</p>
+            </li>
+            <li class="img-background">
+              <img
+                src="./images/img4person.jpg"
+                alt="Portrait of Daniel Wilson, Product Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item">Daniel Wilson</h3>
+              <p class="team-list-p">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section>
-        <h2 class="portfolio">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/portfolio1.jpg"
-              alt="Portfolio case one"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Banking App</h3>
-            <p class="portfolio-list-p">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio2.jpg"
-              alt="Portfolio case two"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Cashless Payment</h3>
-            <p class="portfolio-list-p">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio3.jpg"
-              alt="Portfolio case three"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Meditation App</h3>
-            <p class="portfolio-list-p">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio4.jpg"
-              alt="Portfolio case four"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Taxi Service</h3>
-            <p class="portfolio-list-p">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio5.jpg"
-              alt="Portfolio case five"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Screen Illustrations</h3>
-            <p class="portfolio-list-p">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio6.jpg"
-              alt="Portfolio case six"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list">Online Courses</h3>
-            <p class="portfolio-list-p">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li>
+              <img
+                src="./images/portfolio1.jpg"
+                alt="Portfolio case one"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item">Banking App</h3>
+              <p class="portfolio-list-p">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio2.jpg"
+                alt="Portfolio case two"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item">Cashless Payment</h3>
+              <p class="portfolio-list-p">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio3.jpg"
+                alt="Portfolio case three"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item">Meditation App</h3>
+              <p class="portfolio-list-p">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio4.jpg"
+                alt="Portfolio case four"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item">Taxi Service</h3>
+              <p class="portfolio-list-p">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio5.jpg"
+                alt="Portfolio case five"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item">Screen Illustrations</h3>
+              <p class="portfolio-list-p">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio6.jpg"
+                alt="Portfolio case six"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item">Online Courses</h3>
+              <p class="portfolio-list-p">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="link-logo" href="./index.html"
-        >Web<span class="webstudio-footer">Studio</span></a
-      >
-      <p class="p-footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="link-logo" href="./index.html"
+          >Web<span class="webstudio-footer">Studio</span></a
+        >
+        <p class="p-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
