--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>WebStudio — Effective Solutions for Your Business</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,8 +20,8 @@
     />
   </head>
   <body>
-    <header>
-      <div class="container">
+    <header class="header">
+      <div class="container container-header">
         <nav class="nav-list">
           <a class="link-logo" href="./index.html">
             Web<span class="webstudio">Studio</span></a
