--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="section-benefits">
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
