--- a/index.html
+++ b/index.html
@@ -61,29 +61,29 @@
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
-            <li>
-              <h3 class="benefits-item">Strategy</h3>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Strategy</h3>
               <p class="benefits-p">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
-              <h3 class="benefits-item">Punctuality</h3>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Punctuality</h3>
               <p class="benefits-p">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
-              <h3 class="benefits-item">Diligence</h3>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Diligence</h3>
               <p class="benefits-p">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li>
-              <h3 class="benefits-item">Technologies</h3>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Technologies</h3>
               <p class="benefits-p">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -104,8 +104,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item">Mark Guerrero</h3>
-              <p class="team-list-p">Product Designer</p>
+              <div class="container-team">
+                <h3 class="team-item">Mark Guerrero</h3>
+                <p class="team-list-p">Product Designer</p>
+              </div>
             </li>
             <li class="img-background">
               <img
@@ -114,8 +116,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item">Tom Ford</h3>
-              <p class="team-list-p">Frontend Developer</p>
+              <div class="container-team">
+                <h3 class="team-item">Tom Ford</h3>
+                <p class="team-list-p">Frontend Developer</p>
+              </div>
             </li>
             <li class="img-background">
               <img
@@ -124,8 +128,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item">Camila Garcia</h3>
-              <p class="team-list-p">Marketing</p>
+              <div class="container-team">
+                <h3 class="team-item">Camila Garcia</h3>
+                <p class="team-list-p">Marketing</p>
+              </div>
             </li>
             <li class="img-background">
               <img
@@ -134,8 +140,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item">Daniel Wilson</h3>
-              <p class="team-list-p">UI Designer</p>
+              <div class="container-team">
+                <h3 class="team-item">Daniel Wilson</h3>
+                <p class="team-list-p">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
