--- a/index.html
+++ b/index.html
@@ -149,69 +149,81 @@
         </div>
       </section>
 
-      <section>
+      <section class="section-portfolio">
         <div class="container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/portfolio1.jpg"
                 alt="Portfolio case one"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item">Banking App</h3>
-              <p class="portfolio-list-p">App</p>
+              <div class="container-portfolio">
+                <h3 class="portfolio-title">Banking App</h3>
+                <p class="portfolio-list-p">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/portfolio2.jpg"
                 alt="Portfolio case two"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item">Cashless Payment</h3>
-              <p class="portfolio-list-p">Marketing</p>
+              <div class="container-portfolio">
+                <h3 class="portfolio-title">Cashless Payment</h3>
+                <p class="portfolio-list-p">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/portfolio3.jpg"
                 alt="Portfolio case three"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item">Meditation App</h3>
-              <p class="portfolio-list-p">App</p>
+              <div class="container-portfolio">
+                <h3 class="portfolio-title">Meditation App</h3>
+                <p class="portfolio-list-p">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/portfolio4.jpg"
                 alt="Portfolio case four"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item">Taxi Service</h3>
-              <p class="portfolio-list-p">Marketing</p>
+              <div class="container-portfolio">
+                <h3 class="portfolio-title">Taxi Service</h3>
+                <p class="portfolio-list-p">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/portfolio5.jpg"
                 alt="Portfolio case five"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item">Screen Illustrations</h3>
-              <p class="portfolio-list-p">Design</p>
+              <div class="container-portfolio">
+                <h3 class="portfolio-title">Screen Illustrations</h3>
+                <p class="portfolio-list-p">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/portfolio6.jpg"
                 alt="Portfolio case six"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item">Online Courses</h3>
-              <p class="portfolio-list-p">Marketing</p>
+              <div class="container-portfolio">
+                <h3 class="portfolio-title">Online Courses</h3>
+                <p class="portfolio-list-p">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
