--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="link-logo" href="./index.html"
+        <a class="link-logo-footer" href="./index.html"
           >Web<span class="webstudio-footer">Studio</span></a
         >
         <p class="p-footer">
